<resources>
    <string name="app_name">Argus</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="empty_password">Invalid</string>
    <string name="empty_username">Invalid</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="email">Email</string>
    <string name="i_already_have_a_account">I already have an Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_address">Email</string>
    <string name="signin">Sign In</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="don_t_have_any_account">Don\'t have an account?</string>
    <string name="validation_link">Please click on the link sent over the mail to you to validate your Account.</string>
    <string name="reset_password_info">Please enter your registered Email Id for password reset instructions</string>
    <string name="skip">Skip</string>
    <string name="logo">Logo</string>
    <string name="required">Required</string>
</resources>
