<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/margin_x"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/forgot_password"
        android:layout_marginBottom="@dimen/margin_3x"
        android:textSize="@dimen/text_24"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reset_password_info"
        android:layout_marginBottom="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:textSize="@dimen/text_14"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_x"
        android:hint="@string/email_address">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="@dimen/margin_x"
            android:drawableStart="@drawable/email_icon"
            android:fontFamily="sans-serif"
            android:inputType="textEmailAddress"
            android:tag="email"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_3x"
        android:text="@string/reset_password"
        android:textAllCaps="true"/>
</LinearLayout>