<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_x"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_2x"
        android:text="@string/i_already_have_a_account"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_2x"
        android:layout_marginLeft="@dimen/margin_x"
        android:layout_marginStart="@dimen/margin_x"
        android:layout_marginTop="@dimen/margin_2x"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email_address">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="@dimen/margin_x"
                android:drawableStart="@drawable/email_icon"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_2x"
        android:layout_marginLeft="@dimen/margin_x"
        android:layout_marginStart="@dimen/margin_x"
        android:layout_marginTop="@dimen/margin_2x"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/password_icon"
                android:drawablePadding="@dimen/margin_x"
                android:drawableStart="@drawable/password_icon"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/margin_2x"
        android:layout_marginRight="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_x"
        android:layout_marginBottom="@dimen/margin_x"
        android:text="@string/forgot_password"
        android:textSize="11sp"/>

    <Button
        android:id="@+id/action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_3x"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/signin"/>

</LinearLayout>